# problemsolver

./: .gitignore  README.md  pyproject.toml
src/problemsolver/: evaluator.py  generator.py  utils.py
src/problemsolver/data/: emergent_optimization_ideas.txt
src/problemsolver/function_generators/: fun_nonlinear.py
src/problemsolver/optimizers/: __init__.py
src/problemsolver/optimizers/bioinspired/: __init__.py  aco.py  bees.py  differential_evolution.py  firefly.py  genetic.py  pso.py  simulated_annealing.py  whale.py
src/problemsolver/optimizers/numeric/: __init__.py  basinhopping.py  dual_annealing.py  lbfgs.py
src/problemsolver/optimizers/scipy/: scipy_opt.py
src/problemsolver/optimizers/sgd/: __init__.py  spsa.py  spsa_adam.py  spsa_momentum.py
tests/: test_optimizers.py
