[tool.poetry]
name = "problemsolver"
version = "0.1.0"
description = "Nonlinear problem-solving algorithms"
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"
numpy = "*"
matplotlib = {version = "*", extras = []}
pandas = {version = "*", extras = ["performance"]}
click = "*"
openai = "*"
langchain = {version = "*", extras = ["openai"]}
langchain-openai = "*"
optuna = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
